--- a/05_antd/02_布局/vite-project/src/style/index.css
+++ b/05_antd/02_布局/vite-project/src/style/index.css
@@ -7,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #f6f6f6;
+  background-color: #213547;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
