modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/index.html" 	deleted:    "05_antd/02_\345\270\203\345\261\200/vite-project/public/3Ddemo/three.js" 	modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/Components/HomePage_Content.jsx" 	modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/Components/HomePage_Footer.jsx" 	modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/Components/HomePage_Header.jsx" 	modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/Components/MyHomePage.jsx" 	modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/Components/Services.jsx" 	modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/assets/babel.svg" 	new file:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/assets/images/wechat.jpg" 	deleted:    "05_antd/02_\345\270\203\345\261\200/vite-project/src/assets/js.svg" 	new file:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/assets/ts.svg" 	modified:   "05_antd/02_\345\270\203\345\261\200/vite-project/src/style/HomePage.css" 	modified:   "\346\267\261\345\205\245\347\220\206\350\247\243React Hooks"

--- a/05_antd/02_布局/vite-project/src/style/HomePage.css
+++ b/05_antd/02_布局/vite-project/src/style/HomePage.css
@@ -1,4 +1,4 @@
-button {
+.learn-more {
     position: relative;
     display: inline-block;
     cursor: pointer;
@@ -11,22 +11,20 @@ button {
     margin-top: 3vh;
     font-size: 1vw;
     font-family: Silkscreen;
+    width: 12vw;
+    height: 3.2vh;
 }
 
-button.learn-more {
-    width: 12rem;
-    height: auto;
-}
 
 button.learn-more .circle {
     transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: relative;
     display: block;
     margin: 0;
-    width: 3rem;
-    height: 3rem;
+    width: 2.8vw;
+    height: 2.8vw;
     background: #141414;
-    border-radius: 1.625rem;
+    border-radius: 2vw;
 }
 
 button.learn-more .circle .icon {
@@ -40,33 +38,33 @@ button.learn-more .circle .icon {
 
 button.learn-more .circle .icon.arrow {
     transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-    left: 0.625rem;
-    width: 1.125rem;
-    height: 0.125rem;
+    left: 0.625vw;
+    width: 1.125vw;
+    height: 0.125vw;
     background: none;
 }
 
 button.learn-more .circle .icon.arrow::before {
     position: absolute;
     content: "";
-    top: -0.29rem;
-    right: 0.0625rem;
-    width: 0.625rem;
-    height: 0.625rem;
-    border-top: 0.125rem solid #a78bfa;
-    border-right: 0.125rem solid #a78bfa;
+    top: -0.29vw;
+    right: 0.0625vw;
+    width: 0.625vw;
+    height: 0.625vw;
+    border-top: 0.125vw solid #a78bfa;
+    border-right: 0.125vw solid #a78bfa;
     transform: rotate(45deg);
 }
 
 button.learn-more .button-text {
     transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -0.2vw;
+    left: 0.75vw;
     right: 0;
     bottom: 0;
-    padding: 0.75rem 0;
-    margin: 0 0 0 1.85rem;
+    padding: 0.75vw 0;
+    margin: 0 0 0 1.85vw;
     color: #fff;
     font-weight: 700;
     line-height: 1.6;
@@ -74,15 +72,26 @@ button.learn-more .button-text {
     text-transform: uppercase;
 }
 
-button:hover .circle {
+.learn-more:hover .circle {
     width: 100%;
 }
 
-button:hover .circle .icon.arrow {
+.learn-more:hover .circle .icon.arrow {
     background: #a78bfa;
-    transform: translate(1rem, 0);
+    transform: translate(1vw, 0);
 }
 
-button:hover .button-text {
+.learn-more:hover .button-text {
     color: #a78bfa;
+}
+
+
+.homepage-icon {
+    width: 27vw;
+    height: 27vw;
+}
+
+.logo {
+    width: 2vw;
+    cursor: pointer;
 }
