--- a/05_antd/02_布局/vite-project/src/style/map.css
+++ b/05_antd/02_布局/vite-project/src/style/map.css
@@ -5,6 +5,7 @@
 .map-container-page5,
 .map-container-page6 {
     /* width: 100.3%; */
+    width: 100%;
     height: 100vh;
     overflow: hidden;
 }
