--- a/05_antd/02_布局/vite-project/src/style/search-input.css
+++ b/05_antd/02_布局/vite-project/src/style/search-input.css
@@ -32,7 +32,7 @@
   left: 0.8rem;
   color: #0B2447;
   transition: all 0.5s;
-  transform: scale(0);
+  /* transform: scale(0); */
   /* z-index: -1; */
 }
 
@@ -70,6 +70,6 @@
 
 .search-input-container input[type="text"]:focus~ .search-label {
   top: -0.625rem;
-  transform: scale(1);
+  /* transform: scale(1); */
   transition: all 0.5s;
 }
