--- a/05_antd/02_布局/vite-project/src/components/tour.css
+++ b/05_antd/02_布局/vite-project/src/components/tour.css
@@ -1,8 +1,8 @@
 .wheel-and-hamster {
     --dur: 1s;
     position: relative;
-    width: 12em;
-    height: 12em;
+    width: 12vw;
+    height: 12vw;
     font-size: 14px;
 }
 
@@ -30,10 +30,10 @@
 .hamster {
     animation: hamster var(--dur) ease-in-out infinite;
     top: 50%;
-    left: calc(50% - 3.5em);
-    width: 7em;
-    height: 3.75em;
-    transform: rotate(4deg) translate(-0.8em, 1.85em);
+    left: calc(50% - 3.5vw);
+    width: 7vw;
+    height: 3.75vw;
+    transform: rotate(4deg) translate(-0.8vw, 1.85vw);
     transform-origin: 50% 0;
     z-index: 1;
 }
@@ -42,12 +42,12 @@
     animation: hamsterHead var(--dur) ease-in-out infinite;
     background: hsl(30, 90%, 55%);
     border-radius: 70% 30% 0 100% / 40% 25% 25% 60%;
-    box-shadow: 0 -0.25em 0 hsl(30, 90%, 80%) inset,
-        0.75em -1.55em 0 hsl(30, 90%, 90%) inset;
+    box-shadow: 0 -0.25vw 0 hsl(30, 90%, 80%) inset,
+        0.75vw -1.55vw 0 hsl(30, 90%, 90%) inset;
     top: 0;
-    left: -2em;
-    width: 2.75em;
-    height: 2.5em;
+    left: -2vw;
+    width: 2.75vw;
+    height: 2.5vw;
     transform-origin: 100% 50%;
 }
 
@@ -55,11 +55,11 @@
     animation: hamsterEar var(--dur) ease-in-out infinite;
     background: hsl(0, 90%, 85%);
     border-radius: 50%;
-    box-shadow: -0.25em 0 hsl(30, 90%, 55%) inset;
-    top: -0.25em;
-    right: -0.25em;
-    width: 0.75em;
-    height: 0.75em;
+    box-shadow: -0.25vw 0 hsl(30, 90%, 55%) inset;
+    top: -0.25vw;
+    right: -0.25vw;
+    width: 0.75vw;
+    height: 0.75vw;
     transform-origin: 50% 75%;
 }
 
@@ -67,31 +67,31 @@
     animation: hamsterEye var(--dur) linear infinite;
     background-color: hsl(0, 0%, 0%);
     border-radius: 50%;
-    top: 0.375em;
-    left: 1.25em;
-    width: 0.5em;
-    height: 0.5em;
+    top: 0.375vw;
+    left: 1.25vw;
+    width: 0.5vw;
+    height: 0.5vw;
 }
 
 .hamster__nose {
     background: hsl(0, 90%, 75%);
     border-radius: 35% 65% 85% 15% / 70% 50% 50% 30%;
-    top: 0.75em;
+    top: 0.75vw;
     left: 0;
-    width: 0.2em;
-    height: 0.25em;
+    width: 0.2vw;
+    height: 0.25vw;
 }
 
 .hamster__body {
     animation: hamsterBody var(--dur) ease-in-out infinite;
     background: hsl(30, 90%, 90%);
     border-radius: 50% 30% 50% 30% / 15% 60% 40% 40%;
-    box-shadow: 0.1em 0.75em 0 hsl(30, 90%, 55%) inset,
-        0.15em -0.5em 0 hsl(30, 90%, 80%) inset;
-    top: 0.25em;
-    left: 2em;
-    width: 4.5em;
-    height: 3em;
+    box-shadow: 0.1vw 0.75vw 0 hsl(30, 90%, 55%) inset,
+        0.15vw -0.5vw 0 hsl(30, 90%, 80%) inset;
+    top: 0.25vw;
+    left: 2vw;
+    width: 4.5vw;
+    height: 3vw;
     transform-origin: 17% 50%;
     transform-style: preserve-3d;
 }
@@ -99,10 +99,10 @@
 .hamster__limb--fr,
 .hamster__limb--fl {
     clip-path: polygon(0 0, 100% 0, 70% 80%, 60% 100%, 0% 100%, 40% 80%);
-    top: 2em;
-    left: 0.5em;
-    width: 1em;
-    height: 1.5em;
+    top: 2vw;
+    left: 0.5vw;
+    width: 1vw;
+    height: 1.5vw;
     transform-origin: 50% 0;
 }
 
@@ -120,12 +120,12 @@
 
 .hamster__limb--br,
 .hamster__limb--bl {
-    border-radius: 0.75em 0.75em 0 0;
+    border-radius: 0.75vw 0.75vw 0 0;
     clip-path: polygon(0 0, 100% 0, 100% 30%, 70% 90%, 70% 100%, 30% 100%, 40% 90%, 0% 30%);
-    top: 1em;
-    left: 2.8em;
-    width: 1.5em;
-    height: 2.5em;
+    top: 1vw;
+    left: 2.8vw;
+    width: 1.5vw;
+    height: 2.5vw;
     transform-origin: 50% 30%;
 }
 
@@ -144,14 +144,14 @@
 .hamster__tail {
     animation: hamsterTail var(--dur) linear infinite;
     background: hsl(0, 90%, 85%);
-    border-radius: 0.25em 50% 50% 0.25em;
-    box-shadow: 0 -0.2em 0 hsl(0, 90%, 75%) inset;
-    top: 1.5em;
-    right: -0.5em;
-    width: 1em;
-    height: 0.5em;
+    border-radius: 0.25vw 50% 50% 0.25vw;
+    box-shadow: 0 -0.2vw 0 hsl(0, 90%, 75%) inset;
+    top: 1.5vw;
+    right: -0.5vw;
+    width: 1vw;
+    height: 0.5vw;
     transform: rotate(30deg) translateZ(-1px);
-    transform-origin: 0.25em 0.25em;
+    transform-origin: 0.25vw 0.25vw;
 }
 
 .spoke {
@@ -165,11 +165,11 @@
 
     from,
     to {
-        transform: rotate(4deg) translate(-0.8em, 1.85em);
+        transform: rotate(4deg) translate(-0.8vw, 1.85vw);
     }
 
     50% {
-        transform: rotate(0) translate(-0.8em, 1.85em);
+        transform: rotate(0) translate(-0.8vw, 1.85vw);
     }
 }
 
